2008-02-17  Lutz Mueller <lutz@users.sourceforge.net>

	Fix #1865046:

	* COPYING:
	* libexif/...: Use 'ue' instead of some strange German character.

2008-02-17  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-loader.c: (exif_loader_get_data) Return NULL if no
	EXIF data has been found.

2008-02-16  Lutz Mueller <lutz@users.sourceforge.net>

	Jan Patera <patera@pictview.com> spotted a problem with my last fix
	for #1774591:

	* libexif/exif-content.c: (exif_content_remove_entry) Recover
	correctly in case of error by remembering the original size of the
	realloc'ed data.
	* libexif/exif-data.c: (exif_data_save_data_entry),
	(exif_data_save_data_content) Same here.
	* libexif/canon/exif-mnote-data-canon.c:
	(exif_mnote_data_canon_save), (exif_mnote_data_canon_load) Same here.
        * libexif/fuji/exif-mnote-data-fuji.c:
        (exif_mnote_data_fuji_save), (exif_mnote_data_fuji_load) Same here.
        * libexif/olympus/exif-mnote-data-olympus.c:
        (exif_mnote_data_olympus_save) Same here.

2008-02-15  Lutz Mueller <lutz@users.sourceforge.net>

	* Changelog
	* README: use 'ue' instead of some stange German character.

2008-02-14  Lutz Mueller <lutz@users.sourceforge.net>

	Fix #1774591 (partially):

	* libexif/exif-content.c: (exif_content_remove_entry) Check the
	return value of exif_mem_realloc.
	* libexif/exif-data.c: (exif_data_save_data_entry), 
	(exif_data_save_data_content) Same here.
	* libexif/canon/exif-mnote-data-canon.c:
	(exif_mnote_data_canon_save), (exif_mnote_data_canon_load) Same here.
	* libexif/fuji/exif-mnote-data-fuji.c:
	(exif_mnote_data_fuji_save), (exif_mnote_data_fuji_load) Same here.
	* libexif/olympus/exif-mnote-data-olympus.c:
	(exif_mnote_data_olympus_save) Same here.

2008-02-14  Lutz Mueller <lutz@users.sourceforge.net>

	Fix #1884609 (partially):

	* libexif/exif-entry.c: (exif_entry_initialize) Initialize
	EXIF_TAG_FLASH and EXIF_TAG_COLOR_SPACE.

2007-12-27  Lutz Mueller <lutz@users.sourceforge.net>
